dashboard tartalom átkerült az eventsre, overflow fix, events oldal scrollolható kártyák

--- a/frontend/MeetWave/src/styles.scss
+++ b/frontend/MeetWave/src/styles.scss
@@ -20,6 +20,7 @@ body, html {
     padding: 0;
     // background-color: var(--mainColor);
     background-color: #dedede;
+    overflow: hidden;
 }
 
 *{
